--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@ body
 {
   background-image: url("dashes.jpg"); 
   position: static;
-  background-repeat: repeat;
+  background-repeat: no-repeat;
   background-size: 100%;
   background-color: rgb(239,237,235);
+	background-attachment:fixed;
 
 
 
